--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@mui/material": "^5.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.6.0",
+    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
     "cookie-session": "^2.0.0-rc.1",
+    "date-fns": "^2.26.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "passport": "^0.4.1",
@@ -18,6 +21,7 @@
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
